--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/server": "^10.0.0",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
+    "pokenode-ts": "^1.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
