--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ DATABASE_URL=file:./db.sqlite
 # Next Auth
 # You can generate the secret via 'openssl rand -base64 32' on Linux
 # More info: https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=
+NEXTAUTH_SECRET= 3453
 NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=
-DISCORD_CLIENT_SECRET=
+DISCORD_CLIENT_ID=1054385012138578011
+DISCORD_CLIENT_SECRET=X7o1cooOGJJK_hVDU-gWVMCzTLpIIqqA
