--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL=postgresql://postgres:TXviADNpL9tWsCVWPdIg@containers-us-west-61.railway.app:5578/railway
 
 # Next Auth
 # You can generate the secret via 'openssl rand -base64 32' on Linux
