--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "framer-motion": "^8.2.4",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "pokenode-ts": "^1.17.0",
